infra/argo/applications/moa/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moa-viewer-deployment
  labels:
    app: moa-viewer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moa-viewer
  template:
    metadata:
      labels:
        app: moa-viewer
    spec:
      volumes:
        - name: shared-data
          emptyDir: {}
      containers:
      - name: moa-viewer
        image: us-central1-docker.pkg.dev/mtrx-hub-dev-3of/matrix-images/moa_visualizer:danrhodes
        ports:
        - containerPort: 8501
        volumeMounts:
        - name: shared-data
          mountPath: /data
---
apiVersion: v1
kind: Service
metadata:
  name: moa-viewer-service
  labels:
    app: moa-viewer
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8501
  selector:
    app:  moa-viewer
